# pantaunet

./: .coverage-thresholds.json  .gitignore  CLAUDE.md  QWEN.md  README.md  RELEASE.md  SERVICE-INVENTORY.md  index.html  package-lock.json  package.json
.claude/commands/: brainstorm.md  pr-shepherd.md  prime.md  review-design.md  self-reflect.md  start-task.md
.github/workflows/: ci.yml  pages.yml  release.yml
.metaswarm/: project-profile.json
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/07-tray-enhancements/: 07-01-PLAN.md  07-02-PLAN.md  07-03-PLAN.md
.planning/phases/08-desktop-widget/: 08-01-SUMMARY.md  08-02-SUMMARY.md  08-desktop-widget-SUMMARY.md
docs/: index.html
scripts/: beads-fetch-conversation-history.ts  beads-fetch-pr-comments.ts
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: database.rs  firewall.rs  icon_generator.rs  lib.rs  main.rs  mock_monitor.rs  monitor_error.rs  monitor_trait.rs  network.rs  utils.rs
src/assets/data/: personality.json
src/components/: Widget.tsx
src/components/ui/: HistoryTab.tsx  MetricCard.tsx  ProcessTable.tsx  SpeedDisplay.tsx  StatusBadge.tsx  Toggle.tsx
src/store/: appStore.ts
src/utils/: format.ts
