[package]
name = "pantaunet"
version = "1.0.0"
description = "Internet Usage Monitor - Cross-platform desktop app"
authors = ["Pantaunet"]
edition = "2021"

[lib]
name = "pantaunet_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
tauri-plugin-store = "2"
tauri-plugin-log = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.32"
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["sync", "time", "rt"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_NetworkManagement_IpHelper",
    "Win32_Networking_WinSock",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus"
] }

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
