[package]
name = "pantaunet"
version = "1.0.0"
description = "Internet Usage Monitor - Cross-platform desktop app"
authors = ["Pantaunet"]
edition = "2021"

[lib]
name = "pantaunet_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.10", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
tauri-plugin-store = "2"
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.33"
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["sync", "time", "rt"] }
image = "0.25"
ab_glyph = "0.2"
thiserror = "2.0.18"
rusqlite = { version = "0.39.0", features = ["bundled"] }
directories = "6.0.0"
windows = { version = "0.62.2", features = ["Win32_NetworkManagement_IpHelper", "Win32_Foundation", "Win32_Networking_WinSock"] }



[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
